# Empire-Server-Cpp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: EmpireServer.cpp  EmpireServer.h  pch.h
src/Components/Classes/: Queue.h  String.cpp  String.h  Thread.cpp  Thread.h
src/Components/Database/: Dataset.cpp  Dataset.h  DatasetMySQL.cpp  DatasetMySQL.h  DatasetPostgreSQL.cpp  DatasetPostgreSQL.h
src/Components/Transport/: Buffer.cpp  Buffer.h  Socket.cpp  Socket.h
src/Engine/: Database.cpp  Database.h  Log.cpp  Log.h  Server.cpp  Server.h
src/Globals/: Consts.cpp  Consts.h  Engine.cpp  Engine.h  Player.cpp  Player.h  Resource.cpp  Resource.h  Storage.cpp  Storage.h
src/Modules/: ModuleAuthorization.cpp  ModuleAuthorization.h  ModulePlanetar.cpp  ModulePlanetar.h
src/Modules/Planetar/Classes/: PlanetarHangar.cpp  PlanetarHangar.h  PlanetarLanding.cpp  PlanetarLanding.h  PlanetarPlanet.cpp  PlanetarPlanet.h  PlanetarPortal.cpp  PlanetarPortal.h  PlanetarShip.cpp  PlanetarShip.h  PlanetarShipGroup.cpp  PlanetarShipGroup.h
src/Modules/Planetar/Control/Ships/: PlanetarShipControlConstruct.cpp  PlanetarShipControlConstruct.h  PlanetarShipControlCustom.cpp  PlanetarShipControlCustom.h  PlanetarShipControlTargetLocal.cpp  PlanetarShipControlTargetLocal.h
src/Modules/Planetar/Engine/: PlanetarEngine.cpp  PlanetarEngine.h  PlanetarProfile.cpp  PlanetarProfile.h
src/Modules/Planetar/Protocol/: PlanetarProtocolReader.cpp  PlanetarProtocolReader.h  PlanetarProtocolWriter.cpp  PlanetarProtocolWriter.h
